--- a/index.html
+++ b/index.html
@@ -176,7 +176,28 @@
             <button class="secondary-button" id="contact-us">Contact Us</button>
         </div>
     </section>
-    
+    <!-- Contact Modal -->
+<div class="contact-modal glass" id="contact-modal">
+    <div class="contact-modal-content">
+        <button class="close-modal" id="close-contact-modal">&times;</button>
+        <h2>Contact Us</h2>
+        <form id="contact-form">
+            <div class="form-group">
+                <label for="fullName">Full Name</label>
+                <input type="text" id="fullName" name="fullName" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="message">Message</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
+            </div>
+            <button type="submit" class="primary-button">Send Message</button>
+        </form>
+    </div>
+</div>
     <!-- Footer -->
     <footer>
         <div class="footer-links">
@@ -191,6 +212,7 @@
     </footer>
     
     <!-- JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="script.js" defer></script> 
 </body>
 </html>
