--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="#technical">Technical</a>
                 <a href="#contact">Contact</a>
             </div>
-            <button class="cta-button" id="access-map">Access Map</button>
+            <button class="cta-button" id="access-map" onclick="location.href='map.html'">Access Map</button>
             <button class="mobile-menu-button" id="mobile-menu-button">
                 <i class="fas fa-bars"></i>
             </button>
@@ -172,7 +172,7 @@
             Start managing your e-scooters more efficiently with our powerful spatial information platform. Access the map interface now or contact us for more information.
         </p>
         <div class="hero-buttons">
-            <button class="primary-button" id="access-map-cta">Access Map</button>
+            <button class="primary-button" id="access-map-cta" onclick="location.href='map.html'">Access Map</button>
             <button class="secondary-button" id="contact-us">Contact Us</button>
         </div>
     </section>
